Day07 - Authentication API in swagger
